kubernetes/apps/flux-system/webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.vaderrp.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames: ["flux-webhook.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook
      backendRefs:
        - name: webhook-receiver
          port: 80
